[package]
name = "ufw_auto_block"
version = "0.1.0"
authors = ["Torben Carstens <github@carstens.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
pest = "2.1.3"
pest_derive = "2.1.0"
bitstring = "0.1.1"
ini = "1.3.0"
regex = "1.4.2"
serde = "1.0.117"
serde_derive = "1.0.117"
thiserror = "1.0.22"
toml = "0.5.7"
